--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -1,14 +1,15 @@
-h1,
-h2,
-h3,
-h4,
-p,
-li {
+body {
+  color: #444;
   font-family: sans-serif;
 }
 
+h1,
+h2,
+h3 {
+  color: #1098ad;
+}
+
 h1 {
-  color: blue;
   font-size: 26px;
 
   text-transform: uppercase;
@@ -120,3 +121,25 @@ a:active {
   font-style: italic;
 }
 /* LVHA */
+
+/* REsolving conflicts */
+
+/* #Copyright {
+  color: red;
+}
+
+.copyright {
+  color: blue;
+}
+
+.text {
+  color: yellow;
+}
+
+footer p {
+  color: green !important;
+} */
+
+nav {
+  font-size: 18px;
+}
