--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -3,6 +3,8 @@
   padding: 0;
 }
 
+/* Page sections */
+
 body {
   color: #444;
   font-family: sans-serif;
@@ -44,6 +46,8 @@ aside {
   padding: 50px 0;
   width: 500px;
 }
+
+/* Smaller elements */
 
 h1,
 h2,
@@ -171,6 +175,20 @@ a:active {
 .post-img {
   width: 100%;
   height: auto;
+}
+
+nav a:link {
+  /* background: orangered;
+  margin: 20px;
+  padding: 20px; */
+
+  margin-right: 30px;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+nav a:link:last-child {
+  margin-right: 0;
 }
 
 /* REsolving conflicts */
