--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -8,6 +8,9 @@
 body {
   color: #444;
   font-family: sans-serif;
+
+  border-top: 10px solid #1098ad;
+  position: relative;
 }
 
 .container {
@@ -189,6 +192,18 @@ nav a:link {
 
 nav a:link:last-child {
   margin-right: 0;
+}
+
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+
+  position: absolute;
+  /* top: 50px;
+  left: 50px; */
+  bottom: 50px;
+  right: 50px;
 }
 
 /* REsolving conflicts */
