--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -206,6 +206,41 @@ button {
   right: 50px;
 }
 
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+
+h2::first-letter {
+  font-size: 80px;
+}
+
+p::first-line {
+  /* color: red; */
+}
+
+h3 + p::first-line {
+  color: red;
+}
+
+h2 {
+  /* background-color: orange; */
+  position: relative;
+}
+
+h2::after {
+  content: "TOP";
+  background-color: #ffe70e;
+  color: #444;
+  font-size: 16px;
+  font-weight: bold;
+  display: inline-block;
+  padding: 5px 10px;
+  position: absolute;
+  top: -15px;
+  right: -25px;
+}
+
 /* REsolving conflicts */
 
 /* #Copyright {
